frontend/src/addons/volto-public-domain-library/theme/extras/header.less
/* ... */
/*-------------------
  Top navigation
--------------------*/

#menu-logo-svg {
  display: absolute;
  height: 72px;
  width: calc(72px * 6); // 432px
  margin-top: -12px;
  margin-left: -24px;

  @media only screen and (min-width: @desktopBreakpoint) {
    margin-top: 0;
    margin-left: -20px;
  }
}

#menu-logo-link {
  height: 50px;
  width: calc(50px * 6); // 432px

  @media only screen and (min-width: @desktopBreakpoint) {
    height: 72px;
    width: calc(72px * 6); // 432px
  }
}

.ui.basic.segment.header-wrapper {
  display: flex;
  align-items: center;
  margin-top: 50px;

  @media only screen and (min-width: @desktopBreakpoint) {
    margin-top: 72px;
  }

  .ui.menu.fixed-navigation {
    background-color: @black;
      border-radius: 0;
      position: fixed;
      top: 0;
      left: 0;
      width: 100%;
      z-index: 2;
      padding: 0 20px;
      height: 50px;

      @media only screen and (min-width: @tabletBreakpoint) {
        padding: 0 24px 0 20px;
      }

      @media only screen and (min-width: @desktopBreakpoint) {
        padding: 0 24px;
        height: 72px;
      }

      .header {
          img {
              @media(max-width: @largestTabletScreen) {
                  max-width: 265px;
              }
          }
      }

      .item {
        padding: 0;
        font-size: 25px;

        a {
          font-size: 38px;
          color: @white;
          margin-left: 1.5rem;
          line-height: 47.7px;
          letter-spacing: -0.5px;
        }

        a:hover,
        a:active {
          color: darken(@white, 60%);
        }

        &.item-language-selector {
            img {
                display: inline-block;
                margin-left: 3px;
                width: 14px;
            }
        }

        &:not(.item-language-selector) a {
            font-weight: 400;
        }

        &.no-padding-right {
            padding-right: 0;
        }

        &.no-padding-left {
            padding-left: 0;
        }
      }

      @media(max-width: @largestComputerScreen) {
          .right.menu > .item:not(.header):not(.item-hamburger) {
            display: none;
          }
      }
      @media(min-width: @desktopBreakpoint) {
        .right.menu > .item-hamburger {
          display: none;
        }
      }
  }
  .menu-language-selector{
      display: none;
  }
}


/*-------------------
  Language selector
--------------------*/

div.header-wrapper .item-language-selector {
  position: relative;
  width: 95px;
  height: 100%;
  padding: 0;
  z-index: 4;

  .language-selector {
      margin-right: 0;
      position: absolute;
      top: 0;
      left: 0;
      background: @black;
      width: 100%;
      padding-left: 15px;
      padding-right: 15px;
      padding-bottom: 0;

      a {
          color: @white;
          text-transform: uppercase;
      }

      a {
          &:hover,
          &:focus,
          &:active {
              color: @white;
          }

          &.selected {
              display: none;
          }

          &:not(:last-child):after {
              content: "";
          }
      }

      .accordion {
          height: 100%;
          background: @black;
      }

      .title {
        width: 73px;
      }

      .accordion .title,
      .ui.accordion .title:not(.ui) {
        white-space: nowrap;
        color: @white;
        font-weight: 400;
        text-transform: uppercase;
        height: 100%;
        line-height: 100%;
        padding: 10px 5px 10px 10px;
        margin: 12.5px 0;
        border: 1px solid @white;
        border-radius: 4px;

        &:hover {
          i {
            text-decoration: none;
          }
        }
      }

      .ui.accordion .content {
          transition: opacity .3s ease-in-out;
          opacity: 0;
          padding-bottom: 15px !important;
      }

      .ui.accordion .content.active {
        opacity: 1;
        margin: 0;
        a {
          font-weight: 400;
          font-size: 25px;
        }
      }

      .ui.accordion .accordion .active.title .dropdown.icon,
      .ui.accordion .active.title .dropdown.icon,
      .ui.accordion.menu .item .active.title>.dropdown.icon,
      .ui.accordion .accordion .title .dropdown.icon,
      .ui.accordion .title .dropdown.icon {
          font-weight: 400;
          margin: 0;
      }

      .ui.accordion .accordion .title .dropdown.icon:before,
      .ui.accordion .title .dropdown.icon:before {
          content: "\e958" !important;
      }

      .ui.accordion .accordion .active.title .dropdown.icon,
      .ui.accordion .active.title .dropdown.icon {
          -webkit-transform: rotate(180deg);
          -moz-transform: rotate(180deg);
          transform: rotate(180deg);
      }

  }
}

/*-------------------
  Search Header
--------------------*/
#page-search {
  .page-search-widget {
      .searchBox();
  }
}
/* ... */

